[gd_scene load_steps=2 format=3 uid="uid://cstar_bar_01"]

[ext_resource type="Script" path="res://scripts/ui/star_bar.gd" id="1_script"]

[node name="StarBar" type="Control"]
custom_minimum_size = Vector2(240, 56)
script = ExtResource("1_script")

[node name="StarProgress" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 20.0
offset_right = 240.0
offset_bottom = 40.0
show_percentage = false

[node name="Star1" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 0.0
offset_top = -6.0
offset_right = 60.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 54
text = "\u2605"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Star2" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 76.0
offset_top = -6.0
offset_right = 136.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 54
text = "\u2605"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Star3" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 152.0
offset_top = -6.0
offset_right = 212.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 54
text = "\u2605"
horizontal_alignment = 1
vertical_alignment = 1
